Correctly aligned page title with body

--- a/css/src/style.scss
+++ b/css/src/style.scss
@@ -145,7 +145,6 @@ h1.page-title {
   font-weight: 100;
   margin-top: 25px;
   margin-bottom: 25px;
-  text-align: center;
 }
 
 .top-title-wrapper > h1 {
@@ -1100,8 +1099,6 @@ blockquote span {
 
 .top-title-wrapper .container {
   width: 100%;
-  margin-left: 50px;
-  margin-right: 50px;
 }
 
 b, strong, time {
